# Fourier-analysis-and-forecasting-

./: Fourier_Analysis_Original.ipynb  README.md  pyproject.toml
FFT Analysis/: README.txt  app.py  requirements.txt
