[project]
name = "fourier-cycle-analyzer"
version = "0.1.0"
description = "Interactive Streamlit application for market cycle analysis using custom Fourier decomposition and user-defined cycle periods."
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "python-binance>=1.0.32",
    "scipy>=1.16.3",
    "streamlit>=1.51.0",
    "yfinance>=0.2.66",
]
